<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_corner_reaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/rootReactionLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rootViewReplyConstraintLayout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sendLoveEmoji"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/love_emoji"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rootViewReplyConstraintLayout"  />

            <TextView
                android:id="@+id/sendSmileEmoji"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:text="@string/smile_emoji"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sendLoveEmoji"/>

            <TextView
                android:id="@+id/sendlolEmoji"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:text="@string/lol_face_emoji"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sendSmileEmoji" />

            <TextView
                android:id="@+id/sendHeartEyeEmoji"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:text="@string/heart_eye_emoji"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sendlolEmoji" />


            <TextView
                android:id="@+id/sendFiremoji"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:text="@string/fire_emoji"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sendHeartEyeEmoji" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootViewReplyConstraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/rootReactionLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/line"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
